--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <div class="contaiiner">
-        <h1 class="heading">Dad Jokes Generator.</h1>
-        
+      <h1 class="heading">Dad Jokes Generator.</h1>
+      <p class="joke" id="joke">Dad Joke</p>
+      <button class="btn" id="btn">Tell me a Joke.</button>
     </div>
   </body>
 </html>
