--- a/Dad-Jokes-Generator/index.html
+++ b/Dad-Jokes-Generator/index.html
@@ -6,6 +6,7 @@
     <title>Dad Joke Generator.</title>
   </head>
   <body>
+    // using class for every tag to make easy to work with css
     <div class="contaiiner">
       <h1 class="heading">Dad Jokes Generator.</h1>
       <p class="joke" id="joke">Dad Joke</p>
