--- a/Dad-Jokes-Generator/index.html
+++ b/Dad-Jokes-Generator/index.html
@@ -12,11 +12,12 @@
     <div class="container">
       <h1 class="heading">Dad Jokes Generator</h1>
       <p class="joke" id="joke">Dad Joke</p>
-      <button onclick="handleChangeJoke()" class="btn" id="btn">
-        Tell me a Joke.
-      </button>
+
+      <!---<button onclick="handleChangeJoke()" class="btn" id="btn"> --->
+
+      <button class="btn" id="btn">Tell me a Joke.</button>
     </div>
 
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
